# westpy

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml-bkup  AUTHORS.md  CONTRIBUTING.md  Makefile  README.md  VERSION.json  pyproject.toml  setup.py
.github/workflows/: ci.yml  doc.yml  lint.yml
doc/: Makefile  acknowledge.rst  conf.py  index.rst  installation.rst  manual.rst  overview.rst  tutorial.rst  westpy_100.ipynb  westpy_100_Getting_Started.ipynb  westpy_200.ipynb
doc/_static/: theme_overrides.css
doc/tutorials/: westpy_100.ipynb  westpy_101.ipynb  westpy_200.ipynb  westpy_300.ipynb
test-suite/: debug_Geometry_view_addFracCoordAtom.ipynb  test_ebseresult.py  test_groundState.py  test_heff.py  test_qdetresult.py  test_qdetresults.py  test_symm.py
test-suite/data/: HeffParameter.json  ebse_reference.json  ebse_solution_reference.json  pw.in  pw.out  pw_ref.in  ref.json  symm_ref.json  wfcK000001B000126.cube  wfcK000001B000127.cube  wfcK000001B000128.cube  wfreq.in  wfreq.json  wfreq.out  wfreq_spinpol.json  wstat.in  wstat.out
westpy/: Connection.py  __init__.py  activeSpace.py  atom.py  cell.py  collection.py  connection.py  dataContainer.py  electronicStructure.py  geometry.py  groundState.py  lifetime.py  qbox2bse.py  relaxation.py  session.py  units.py  utils.py  vdata.py
westpy/bse/: __init__.py  bseresult.py  qbox2bse.py  wfreq2bse.py
westpy/embedding/: __init__.py  cgwresults.py  heff.py  misc.py  symm.py
westpy/qdet/: __init__.py  cgwresults.py  ebse.py  ebseresult.py  heff.py  json_parser.py  misc.py  qdetresult.py  qdetresults.py  symm.py  (+2 more)
(+3 files in other folders)
